--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+/* main */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+  font: 'Roboto', sans-serif;
+  background: #e5e5e5;
+}
+
 /* -------- HOME PAGE MOBILE -------- */
 
 /* navbar */
