--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@ body {
 }
 
 .card {
-    height: 500px;
-    width: 400px;
+    height: 306px;
+    width: 284px;
     position: absolute;
     top: 10%;
     left: 10%;
     background: white;
     border-radius: 10px;
     display: grid;
-    grid-template-rows: 50% 10% 25% 15%;
+    grid-template-rows: 50% 9% 26% 15%;
     grid-template-columns: 2fr 2fr;
 }
 
@@ -31,32 +31,34 @@ body {
 
 .cardTitle {
     grid-area: 2 / 1 / 3 / 3;
-    font-size: 9px;
-    font-weight: 500;   
+    font-size: 8px;
+    font-weight: 300;   
 }
 
 .title {
-    padding-left: 0.5em;
-    padding-top: 0.5em;   
+    margin-top: 0.3em;
+    margin-left: 0.4em;
+    
 }
 
 .cardPar {
     grid-area: 3 / 1 / 4 / 3;
-    padding-left: 0.5em;
-    padding-right: 0.5em;   
+    margin-left: 0.5em;
+    padding-left: 0;   
 }
 
 
 .par {
-    line-height: 1.6em;
-    margin: 0;
+    line-height: 1.1em;
+    margin-top: 5px;
+    
 }
 
 .cardButton {
     grid-area: 4 / 1 / 5 / 3;
     position: absolute;
-    top: 30%;
-    right: 6%;
+    top: -2%;
+    right: 5%;
 }
 
 .infoButton {
