--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,64 @@
   width: 100vw;
 }
 
+/* ticketing */
+
+form {
+  text-align: center;
+  background: #ffffff;
+}
+
+.form-title {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-group-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+  font-weight: bold;
+}
+
+.form-label {
+  margin-top: 0.7rem;
+}
+
+.form-input {
+  width: 15%;
+  height: 2em;
+}
+
+.form-price {
+  margin-top: 1rem;
+}
+
+.form-submit {
+  width: 90%;
+  height: 3em;
+  background: #ff881b;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+}
+
 /* -------- HOME PAGE DESKTOP -------- */
 
 /* navbar */
@@ -40,5 +98,34 @@
   .header-img {
     height: 100vh;
     width: 100%;
+  }
+
+  /* ticketing */
+
+  form {
+    width: 50vw;
+    border: 2px solid black;
+    margin: auto;
+  }
+
+  .form-container {
+    flex-direction: row;
+  }
+
+  .form-group-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .form-group {
+    width: 50%;
+  }
+
+  .form-input {
+    width: 20%;
+  }
+
+  .total {
+    margin-bottom: 2rem;
   }
 }
