--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background: #e5e5e5;
 }
 
