--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,18 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+  --main-bg-color: #e5e5e5;
+  --content-bg-color: #ffffff;
+  --orange: #ff881b;
+  --title-font-size: 2rem;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background: #e5e5e5;
+  background: var(--main-bg-color);
 }
 
 /* -------- HOME PAGE MOBILE -------- */
@@ -14,14 +21,14 @@ body {
 /* navbar */
 
 .navbar-title {
-  color: #ff881b;
+  color: var(--orange);
   font-weight: bold;
-  font-size: 2rem;
+  font-size: var(--title-font-size);
 }
 
 .navbar-title:hover {
   text-decoration: none;
-  color: #ff881b;
+  color: var(--orange);
   opacity: 0.8;
 }
 
@@ -36,12 +43,12 @@ body {
 
 form {
   text-align: center;
-  background: #ffffff;
+  background: var(--content-bg-color);
 }
 
 .form-title {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: var(--title-font-size);
 }
 
 .form-container {
@@ -84,8 +91,8 @@ form {
 .form-submit {
   width: 90%;
   height: 3em;
-  background: #ff881b;
-  color: #ffffff;
+  background: var(--orange);
+  color: var(--content-bg-color);
   border: none;
   border-radius: 5px;
 }
