--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ footer{
     padding-right: 50px;
     height: 50px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .footerMenu {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .footerLogo {
@@ -21,6 +21,8 @@ footer{
 
 li {
     list-style: none;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .fa-twitter::before {
@@ -30,15 +32,16 @@ li {
     font-family: "Font Awesome 5 Brands"; content: "\e055";
 }
 
+
 @media screen and (min-width: 768px) {
 
 footer {
     display: flex;
-    padding: 25px;
+    padding: 0px;
     padding-left: 0px;
-    padding-right: 50px;
-    height: 100px;
-    align-items: center;
+    padding-right: 85px;
+    height: 75px;
+    align-items: left;
     justify-content: space-around;
 }
         
@@ -53,6 +56,7 @@ li {
 
 .footerMenu {
     flex-direction: column;
+    text-align: left;
 }
 
 .fa-twitter::before {
