--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* main */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 :root {
   --main-bg-color: #5b78c7;
   --content-bg-color: #ffffff;
@@ -10,11 +10,57 @@
   --title-font-size: 2rem;
 }
 
-body {
+html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: var(--main-bg-color);
+  scroll-behavior: smooth;
+}
+
+/* animations */
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 /* -------- HOME PAGE MOBILE -------- */
@@ -35,10 +81,35 @@ body {
 
 /* banner */
 
+.header {
+  position: relative;
+}
+
 .header-img {
   height: 40vh;
   width: 100vw;
   margin-bottom: var(--section-margin);
+}
+
+.header-text {
+  width: 100%;
+  color: var(--orange);
+  font-family: 'Anton', sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+  font-style: italic;
+  -webkit-animation: fadein 1s ease-in;
+  -moz-animation: fadein 1s ease-in;
+  animation: fadein 1s ease-in;
+  position: absolute;
+  top: 35%;
+  left: 55%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+}
+
+.arrow {
+  display: none;
 }
 
 /* ticketing */
@@ -161,6 +232,33 @@ form {
   .header-img {
     height: 100vh;
     width: 100%;
+  }
+
+  .header-text {
+    width: 60vw;
+    top: 65%;
+    font-size: 7rem;
+  }
+
+  .arrow {
+    display: block;
+    width: 0;
+    color: grey;
+    position: absolute;
+    margin: auto;
+    top: 92%;
+    left: 50%;
+  }
+
+  .arrow:hover {
+    color: grey;
+    text-decoration: none;
+  }
+
+  .bounce {
+    -moz-animation: bounce 3s infinite;
+    -webkit-animation: bounce 3s infinite;
+    animation: bounce 3s infinite;
   }
 
   /* ticketing */
