--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,10 @@ form {
   margin: var(--section-margin);
 }
 
+.card {
+  width: 90vw;
+}
+
 .news-title {
   font-weight: bold;
   font-size: var(--title-font-size);
@@ -203,7 +207,7 @@ form {
   background-color: var(--content-bg-color);
   color: var(--orange);
   border: 1px solid var(--orange);
-  margin-left: 9em;
+  margin-left: 12em;
 }
 
 /* questions */
@@ -279,7 +283,6 @@ form {
   form {
     width: 50vw;
     margin: auto;
-    border: 2px solid black;
   }
 
   .form-container {
@@ -307,6 +310,14 @@ form {
 
   .news-articles {
     flex-direction: row;
+  }
+
+  .card {
+    width: 25vw;
+  }
+
+  .news-btn {
+    margin-left: 16em;
   }
 
   /* questions */
