--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,42 @@ form {
   border-radius: 5px;
 }
 
+/* Footer format mobile */
+
+footer{
+  align-items: center;
+  font-size: 0.5rem;
+  text-align: center;
+  padding: 0px;
+  padding-right: 50px;
+  height: 50px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footerMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.footerLogo {
+  display: none;
+}
+
+li {
+  list-style: none;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.fa-twitter::before {
+  font-family: "Font Awesome 5 Brands"; content: "\f099";
+}
+.fa-instagram-square::before {
+  font-family: "Font Awesome 5 Brands"; content: "\e055";
+}
+
 /* -------- DESKTOP -------- */
 
 @media screen and (min-width: 768px) {
@@ -301,3 +337,71 @@ form {
     width: 20vw;
   }
 }
+
+/* Footer format desktop */
+
+@media screen and (min-width: 768px) {
+
+  footer {
+      display: flex;
+      padding: 0px;
+      padding-left: 0px;
+      padding-right: 85px;
+      height: 75px;
+      align-items: left;
+      justify-content: space-around;
+  }
+          
+  li {
+      list-style: none;
+  }
+  
+  .socialNetworks .footerLogo {
+      display: block;
+      width: 100%;
+  }
+  
+  .footerMenu {
+      flex-direction: column;
+      text-align: left;
+  }
+  
+  .fa-twitter::before {
+      font-family: "Font Awesome 5 Brands"; content: "\f099";
+  }
+  
+  .fa-instagram-square::before {
+      font-family: "Font Awesome 5 Brands"; content: "\e055";
+  }
+  
+  .footerLogo {
+      display: block;
+  }
+  
+  }
+
+
+/* History format desktop */
+
+.bloc-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 2rem;
+  grid-row-gap : 2rem;
+  margin : 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
