--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ html body {
 /* navbar */
 
 .navbar-title {
-  color: var(--orange);
+  color: var(--content-bg-color);
   font-weight: bold;
   font-size: var(--title-font-size);
 }
@@ -82,31 +82,35 @@ html body {
 
 /* banner */
 
-.header {
+.main-banner {
+  background-image: url("./images/race.jpg");
+  height: 70vh;
   position: relative;
-}
-
-.header-img {
-  height: 40vh;
-  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-bottom: var(--section-margin);
 }
 
-.header-text {
-  width: 80%;
+.header-title {
+  text-align: center;
+  font-size: 5rem;
+  letter-spacing: 0.3rem;
   color: var(--content-bg-color);
-  text-shadow: 2px 3px 5px #2A2A2A;
+  text-shadow: 2px 3px 6px #141414;
   font-family: 'Anton', sans-serif;
-  font-size: 3rem;
-  font-weight: 600;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   -webkit-animation: fadein 1s ease-in;
   -moz-animation: fadein 1s ease-in;
   animation: fadein 1s ease-in;
-  position: absolute;
-  top: 38%;
-  left: 55%;
-  margin: 0;
   transform: translate(-50%, -50%);
+}
+
+.header-text {
+  visibility: hidden;
 }
 
 .arrow {
@@ -183,7 +187,7 @@ form {
 .bloc-total {
   display: flex;
   flex-direction: row;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .total {
@@ -220,7 +224,7 @@ form {
 .news-title {
   font-weight: bold;
   font-size: var(--title-font-size);
-  margin-left: 1em;
+  margin-left: 2em;
 }
 
 .news-title:after {
@@ -340,17 +344,31 @@ li {
     margin-right: 2em;
   }
 
-  /* banner */
+  /* header */
 
-  .header-img {
-    height: 100vh;
-    width: 100%;
+  .header-title {
+    font-size: 6rem;
   }
 
   .header-text {
-    width: 60vw;
-    top: 65%;
-    font-size: 7rem;
+    visibility: visible;
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: var(--content-bg-color);
+    text-shadow: 1px 2px 5px #2A2A2A;
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    -webkit-animation: fadein 1s ease-in;
+    -moz-animation: fadein 1s ease-in;
+    animation: fadein 1s ease-in;
+    transform: translate(-50%, -50%);
+    margin-top: 5vh;
+  }
+
+  .main-banner {
+    height: 100vh;
   }
 
   .arrow {
@@ -359,12 +377,12 @@ li {
     color: grey;
     position: absolute;
     margin: auto;
-    top: 92%;
+    top: 80%;
     left: 50%;
   }
 
   .arrow:hover {
-    color: grey;
+    color: white;
     text-decoration: none;
   }
 
@@ -374,11 +392,12 @@ li {
     animation: bounce 3s infinite;
   }
 
+
   /* ticketing */
 
   form {
-    width: 50vw;
-    margin: auto;
+    width: 60vw;
+    margin: 10vh auto;
   }
 
   .form-container {
@@ -395,7 +414,7 @@ li {
   }
 
   .form-input {
-    width: 20%;
+    width: 22%;
   }
 
   .total {
