--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 :root {
-  --main-bg-color: #5b78c7;
+  --main-bg-color: #e5e5e5;
   --content-bg-color: #ffffff;
   --orange: #ff881b;
   --section-margin: 2em;
   --title-font-size: 2rem;
 }
 
-html {
+html body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -87,22 +88,22 @@ html {
 
 .header-img {
   height: 40vh;
-  width: 100vw;
+  width: 100%;
   margin-bottom: var(--section-margin);
 }
 
 .header-text {
-  width: 100%;
-  color: var(--orange);
+  width: 80%;
+  color: var(--content-bg-color);
+  text-shadow: 2px 3px 5px #2a2a2a;
   font-family: 'Anton', sans-serif;
   font-size: 3rem;
-  font-weight: bold;
-  font-style: italic;
+  font-weight: 600;
   -webkit-animation: fadein 1s ease-in;
   -moz-animation: fadein 1s ease-in;
   animation: fadein 1s ease-in;
   position: absolute;
-  top: 35%;
+  top: 38%;
   left: 55%;
   margin: 0;
   transform: translate(-50%, -50%);
@@ -124,9 +125,22 @@ form {
   margin-bottom: var(--section-margin);
 }
 
+.bloc-form-title {
+  display: flex;
+  justify-content: center;
+}
+
 .form-title {
   font-weight: bold;
   font-size: var(--title-font-size);
+}
+
+.form-title:after {
+  content: ' ';
+  display: block;
+  border-bottom: 3px solid #ff881b;
+  padding-top: 0.8vh;
+  width: 10vh;
 }
 
 .form-container {
@@ -166,6 +180,20 @@ form {
   margin-top: 1em;
 }
 
+.bloc-total {
+  display: flex;
+  flex-direction: row;
+  font-size: 1.3rem;
+}
+
+.total {
+  margin-right: 1vh;
+}
+
+.result {
+  font-weight: 600;
+}
+
 .form-submit {
   width: 90%;
   height: 3em;
@@ -180,10 +208,27 @@ form {
 .news {
   margin-bottom: var(--section-margin);
 }
+
+.article {
+  margin: var(--section-margin);
+}
+
+.card {
+  width: 90vw;
+}
+
 .news-title {
   font-weight: bold;
   font-size: var(--title-font-size);
   margin-left: 1em;
+}
+
+.news-title:after {
+  content: ' ';
+  display: block;
+  border-bottom: 3px solid #ff881b;
+  padding-top: 0.8vh;
+  width: 10vh;
 }
 
 .news-articles {
@@ -191,6 +236,12 @@ form {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+.news-btn {
+  background-color: var(--content-bg-color);
+  color: var(--orange);
+  border: 1px solid var(--orange);
 }
 
 /* questions */
@@ -211,40 +262,86 @@ form {
   border-radius: 5px;
 }
 
-/* Footer format mobile */
+/* footer */
 
-footer{
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  font-size: 0.5rem;
   text-align: center;
-  padding: 0px;
-  padding-right: 50px;
-  height: 50px;
-  align-items: center;
-  justify-content: space-between;
+  height: 30vh;
+  background-color: var(--content-bg-color);
 }
 
 .footerMenu {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  width: 100%;
+  margin: 0;
+  padding: 1em;
+}
+
+.footerItem {
+  color: black;
+}
+
+.footerItem:hover {
+  color: black;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+li {
+  list-style-type: none;
+}
+
+.footerSocialNetworks {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0.6em;
+}
+
+.fa-instagram {
+  color: white;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.fa-instagram:hover {
+  color: white;
+}
+
+.fa-twitter {
+  color: #1da1f3;
+}
+
+.fa-twitter:hover {
+  color: #1da1f3;
+}
+
+.fa-facebook-f {
+  color: #3d5a99;
+}
+
+.fa-facebook-f:hover {
+  color: #3d5a99;
 }
 
 .footerLogo {
   display: none;
-}
-
-li {
-  list-style: none;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.fa-twitter::before {
-  font-family: "Font Awesome 5 Brands"; content: "\f099";
-}
-.fa-instagram-square::before {
-  font-family: "Font Awesome 5 Brands"; content: "\e055";
 }
 
 /* -------- DESKTOP -------- */
@@ -331,65 +428,61 @@ li {
     flex-direction: row;
   }
 
+  .card {
+    width: 25vw;
+  }
+
   /* questions */
 
   .questions-button {
     width: 20vw;
   }
-}
 
-/* Footer format desktop */
-
-@media screen and (min-width: 768px) {
+  /* footer */
 
   footer {
-      display: flex;
-      padding: 0px;
-      padding-left: 0px;
-      padding-right: 85px;
-      height: 75px;
-      align-items: left;
-      justify-content: space-around;
+    flex-direction: row;
   }
-          
-  li {
-      list-style: none;
-  }
-  
-  .socialNetworks .footerLogo {
-      display: block;
-      width: 100%;
-  }
-  
+
   .footerMenu {
-      flex-direction: column;
-      text-align: left;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 33vw;
+    height: 100%;
   }
-  
-  .fa-twitter::before {
-      font-family: "Font Awesome 5 Brands"; content: "\f099";
+
+  .footerItemSeparator {
+    display: none;
   }
-  
-  .fa-instagram-square::before {
-      font-family: "Font Awesome 5 Brands"; content: "\e055";
+
+  .footerSocialNetworks {
+    width: 33vw;
   }
-  
+
   .footerLogo {
-      display: block;
-  }
-  
+    display: block;
+    width: 33vw;
   }
 
+  .footerLogoImage {
+    height: 20vh;
+    border-radius: 50px;
+  }
 
-/* History format desktop */
+  /* History format desktop */
 
 .bloc-container {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: minmax (1fr 1fr 1fr, auto);
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 2rem;
   grid-row-gap : 2rem;
   margin : 2rem;
+}
+
+
+
 }
 
 
