--- a/styles.css
+++ b/styles.css
@@ -373,7 +373,7 @@ li {
 /* -------- HISTORY PAGE MOBILE -------- */
 
 .header-img {
-  background-image: url("./images/histoire_bannière.jpg");
+  width: 100%;
   height: 70vh;
   position: relative;
   background-position: center;
@@ -581,6 +581,12 @@ li {
 
  /* -------- HISTORY PAGE DESKTOP -------- */
 
+ .header-img {
+    width: 100%;
+    height: 90vh;
+    background-size: cover;
+  }
+
  .main-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -589,7 +595,7 @@ li {
     grid-row-gap : 2rem;
     margin : 2rem;
     text-align: justify;
-   grid-template-areas:
+    grid-template-areas:
     "box-1 box-2"
     "box-4 box-3"
     "box-5 box-6";
