--- a/style-contact.css
+++ b/style-contact.css
@@ -19,7 +19,7 @@ h2:after {
     display: block;
     border-bottom: 3px solid #FF881B;
     padding-top: 0.8vh;
-    width: 10vh;
+    width: 5vw;
 }
 
 /* contact form */
@@ -103,11 +103,11 @@ h2:after {
 .cardHotel {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 1fr 23% 1fr;
+    grid-template-columns: 1fr 19% 1fr;
     grid-template-rows: 20% 2fr;
     align-items: center;
     background-color: white;
-    max-width: 50vh;
+    max-width: 100vw;
     border-radius: 5px;
     margin: 10px 5px;
 }
@@ -166,7 +166,7 @@ h2:after {
     }
 
     .contactForm {
-        width: 100vh;
+        width: 60vw;
     }
 
     .blocLocation {
@@ -179,8 +179,12 @@ h2:after {
         justify-content: space-around;
     }
 
+    .cardHotel{
+        grid-template-columns: 1fr 25% 1fr;
+    }
+
     .locationContainer {
         margin: 0px 40px;
-        width: 120vh;
+        width: 90vw;
     }
 }
