--- a/styles.css
+++ b/styles.css
@@ -383,7 +383,9 @@ li {
 }
 
 .main-container {
+  background-color: white;
   display: flex;
+  margin-bottom: 5rem;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -391,31 +393,50 @@ li {
 }
 
 .box-1 {
+  background-color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 2rem;
   }
 
-.box-2 {
+.box-2 {  
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  align-self: center;
   margin: 2rem;
   }
 
 .box-3 {
+  background-color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 2rem;
   }
 
 .box-4 {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 2rem;
   }
 
 .box-5 {
+  background-color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 2rem;
   }
 
 .box-6 {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 2rem;
   }
@@ -426,16 +447,29 @@ li {
   height: 12.5rem;
   }
 
-
-.history-icons {
+.fa-car {
   width: 2.5rem;
   height: 2.5rem;
+  color: var(--orange);
+  }
+
+.fa-flag-checkered {
+  width: 2.5rem;
+  height: 2.5rem;
+  color: var(--orange);
+  }
+
+.fa-tools {
+  width: 2.5rem;
+  height: 2.5rem;
+  color: var(--orange);
   }
 
 .history-btn {
   background-color: var(--content-bg-color);
   color: var(--orange);
   border: 1px solid var(--orange);
+  align-self: flex-end;
   }
 
 .mobile-hidden{
