--- a/style-contact.css
+++ b/style-contact.css
@@ -76,6 +76,12 @@ h2:after {
 
 /* location : map & info */
 
+iframe {
+    width: 100%;
+    height: 60vh;
+    border: 0;
+}
+
 .blocLocation {
     display: flex;
     flex-direction: column;
@@ -85,25 +91,31 @@ h2:after {
     background-color: white;
     border-radius: 5px;
     padding: 20px;
-    margin-top: 40px;
+    margin-top: 8vh;
+}
+
+.locationContainer > p {
+  margin-top: 4vh;
+  font-size: 1.1rem;
 }
 
 .location {
-    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
-.location > a {
-    text-decoration: none;
-    color: black;
-    line-height: 3rem;
+.contactLinks {
+  text-decoration: none;
+  color: black;
+  line-height: 3rem;
 }
 
 .location > i {
-    margin-right: 5px;
+    margin-right: 0.3vw;
 }
 
 .locationTel {
-    margin-right: 10px;
+    margin-right: 2vw;
 }
 
 /* hotel cards */
@@ -122,19 +134,19 @@ h2:after {
 .cardHotel {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 1fr 19% 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 20% 2fr;
     align-items: center;
     background-color: white;
     max-width: 100vw;
     border-radius: 5px;
-    margin: 10px 5px;
+    margin: 10px 0px;
 }
 
 .cardHotelImg {
     grid-area: 1 / 1 / 4 / 2;
     border-radius: 3px;
-    width: 25vh;
+    width: 192px;
 }
 
 .cardHotelInfo {
@@ -166,6 +178,7 @@ h2:after {
 .cardHotelIcons {
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
     grid-area: 1 / 3 / 2 / 4;
 }
 
@@ -195,7 +208,7 @@ footer {
   }
   
   .footerItem {
-    color: white;
+    color: rgba(255,255,255,.5);
   }
   
   .footerItem:hover {
@@ -274,10 +287,17 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        
     }
+
     .contactForm {
         width: 60vw;
+    }
+
+/* location : map & info  */
+    .location {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
     }
 
 /* hotel cards */
@@ -293,6 +313,7 @@ footer {
 
     .cardHotel{
         grid-template-columns: 1fr 25% 1fr;
+        margin: 10px 5px;
     }
 
     .locationContainer {
