--- a/css/style-home.css
+++ b/css/style-home.css
@@ -11,7 +11,7 @@
   --title-font-size: 2rem;
 }
 
-html body {
+html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -369,7 +369,6 @@ li {
   display: none;
 }
 
-
 /* -------- HISTORY PAGE MOBILE -------- */
 
 .header-img {
@@ -399,15 +398,15 @@ li {
   flex-direction: column;
   flex: 1;
   margin: 2rem;
-  }
+}
 
-.box-2 {  
+.box-2 {
   display: flex;
   flex-direction: column;
   flex: 1;
   align-self: center;
   margin: 2rem;
-  }
+}
 
 .box-3 {
   background-color: white;
@@ -416,14 +415,14 @@ li {
   flex-direction: column;
   flex: 1;
   margin: 2rem;
-  }
+}
 
 .box-4 {
   display: flex;
   flex-direction: column;
   flex: 1;
   margin: 2rem;
-  }
+}
 
 .box-5 {
   background-color: white;
@@ -432,47 +431,46 @@ li {
   flex-direction: column;
   flex: 1;
   margin: 2rem;
-  }
+}
 
 .box-6 {
   display: flex;
   flex-direction: column;
   flex: 1;
   margin: 2rem;
-  }
-
+}
 
 .history-img {
   width: 20rem;
   height: 12.5rem;
-  }
+}
 
 .fa-car {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .fa-flag-checkered {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .fa-tools {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .history-btn {
   background-color: var(--content-bg-color);
   color: var(--orange);
   border: 1px solid var(--orange);
   align-self: flex-end;
-  }
+}
 
-.mobile-hidden{
+.mobile-hidden {
   display: none;
 }
 
@@ -617,34 +615,46 @@ li {
     border-radius: 50px;
   }
 
- /* -------- HISTORY PAGE DESKTOP -------- */
+  /* -------- HISTORY PAGE DESKTOP -------- */
 
- .header-img {
+  .header-img {
     width: 100%;
     height: 90vh;
     background-size: cover;
   }
 
- .main-container {
+  .main-container {
     display: grid;
     grid-template-columns: 1fr;
     /*grid-template-rows: minmax (1fr, auto);*/
     grid-column-gap: 2rem;
-    grid-row-gap : 2rem;
-    margin : 2rem;
+    grid-row-gap: 2rem;
+    margin: 2rem;
     text-align: justify;
     grid-template-areas:
-    "box-1 box-2"
-    "box-4 box-3"
-    "box-5 box-6";
+      'box-1 box-2'
+      'box-4 box-3'
+      'box-5 box-6';
   }
 
-  .box-1 { grid-area: box-1; }
-  .box-2 { grid-area: box-2; }
-  .box-3 { grid-area: box-3; }
-  .box-4 { grid-area: box-4; }
-  .box-5 { grid-area: box-5; }
-  .box-6 { grid-area: box-6; }
+  .box-1 {
+    grid-area: box-1;
+  }
+  .box-2 {
+    grid-area: box-2;
+  }
+  .box-3 {
+    grid-area: box-3;
+  }
+  .box-4 {
+    grid-area: box-4;
+  }
+  .box-5 {
+    grid-area: box-5;
+  }
+  .box-6 {
+    grid-area: box-6;
+  }
 
   .main-container > btn history-btn {
     display: none;
@@ -655,7 +665,7 @@ li {
     height: 30rem;
   }
 
-  .history-img:hover{ 
+  .history-img:hover {
     transition: all 1s ease-in-out;
     transform: scale(1.5);
   }
@@ -664,20 +674,7 @@ li {
     display: none;
   }
 
-  .mobile-hidden{
+  .mobile-hidden {
     display: grid;
   }
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
