--- a/css/style-home.css
+++ b/css/style-home.css
@@ -233,6 +233,10 @@ form {
   width: 90vw;
 }
 
+.card:hover {
+  border: 2px solid var(--orange);
+}
+
 .news-title {
   font-weight: bold;
   font-size: var(--title-font-size);
