--- a/css/style-home.css
+++ b/css/style-home.css
@@ -16,6 +16,9 @@ html body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: var(--main-bg-color);
+}
+
+html {
   scroll-behavior: smooth;
 }
 
@@ -77,13 +80,25 @@ html body {
 }
 
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 /* -------- HOME PAGE MOBILE -------- */
@@ -152,12 +167,12 @@ html body {
 
 .modal {
   display: none;
-  position: fixed; 
+  position: fixed;
   padding-top: 50px;
-  left: 0; 
+  left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -165,20 +180,20 @@ html body {
 .modal-content {
   display: flex;
   flex-direction: column;
-  position: relative; 
-  background-color: #343B3F;
-  padding: 20px; 
-  margin: auto; 
-  width: 90%;  
+  position: relative;
+  background-color: #343b3f;
+  padding: 20px;
+  margin: auto;
+  width: 90%;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 .close-btn {
   align-self: flex-end;
-  color: lightgray; 
-  font-size: 30px;  
+  color: lightgray;
+  font-size: 30px;
   font-weight: bold;
 }
 
@@ -199,11 +214,12 @@ html body {
   color: white;
 }
 
-.newsletter-form > input, textarea {
+.newsletter-form > input,
+textarea {
   margin-bottom: 1.5vh;
   padding: 1.3vh;
   font-family: 'Robot', sans-serif;
-  border: 1px solid #DFDFDF;
+  border: 1px solid #dfdfdf;
   border-radius: 5px;
 }
 
@@ -214,20 +230,20 @@ html body {
   align-items: center;
 }
 
-.newsletter-check > input{
+.newsletter-check > input {
   height: 20px;
   width: 20px;
   margin-right: 4vw;
 }
 
- #contactSend {
+#contactSend {
   align-self: flex-end;
-  background-color: #FF881B;
-  color: white;;
+  background-color: #ff881b;
+  color: white;
   padding: 1.1vh 5vh;
   border-radius: 5px;
   border: none;
-} 
+}
 
 .arrow {
   display: none;
@@ -649,10 +665,10 @@ li {
   }
 
   .modal-content {
-    width: 40%;  
+    width: 40%;
   }
 
-  .newsletter-check > input{
+  .newsletter-check > input {
     margin-right: 1vw;
   }
 
@@ -679,7 +695,7 @@ li {
     -moz-animation: bounce 3s infinite;
     -webkit-animation: bounce 3s infinite;
     animation: bounce 3s infinite;
-  } 
+  }
 
   /* ticketing */
 
