--- a/css/style-home.css
+++ b/css/style-home.css
@@ -94,6 +94,7 @@ html body {
 
 /* banner */
 
+
 .main-banner {
   background-image: url('../images/race.jpg');
   height: 70vh;
@@ -103,6 +104,7 @@ html body {
   background-size: cover;
   margin-bottom: var(--section-margin);
 }
+
 
 .header-title {
   text-align: center;
@@ -375,16 +377,7 @@ li {
 /* banner */
 
 .history-banner {
-  height: 70vh;
-  position: relative;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: var(--section-margin);
-}
-
-.header-img {
-  width: 100%;
+  background-image: url('../images/history_LeMans_1923.jpg');
   height: 70vh;
   position: relative;
   background-position: center;
@@ -397,7 +390,7 @@ li {
   background-color: white;
   display: flex;
   margin-top: 1rem;
-  margin-inline: 2rem;
+  margin-inline: 1rem;
   margin-bottom: 4rem;
   flex-direction: column;
   align-items: center;
@@ -406,86 +399,81 @@ li {
 }
 
 .box-1 {
-  background-color: white;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   flex: 1;
-  /*margin: 2rem*/
-  }
+  padding: 1rem;
+}
 
 .box-2 {  
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 1rem;
-  /*margin: 2rem*/
-  }
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+  
 
 .box-3 {
-  background-color: white;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   flex: 1;
-  /*margin: 2rem*/
-  }
+  padding: 1rem;
+}
 
 .box-4 {
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 1rem;
-  /*margin: 2rem*/
-  }
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 
 .box-5 {
-  background-color: white;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   flex: 1;
-  /*margin: 2rem*/
-  }
+  padding: 1rem;
+}
 
 .box-6 {
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 1rem;
-  /*margin: 2rem*/
-  }
-
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 
 .history-img {
-  width: 15rem;
-  height: 10rem;
-  }
+  align-self: center;
+  width: 18rem;
+  height: 12.5rem;
+}
 
 .fa-car {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .fa-flag-checkered {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .fa-tools {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--orange);
-  }
+}
 
 .history-btn {
   background-color: var(--content-bg-color);
   color: var(--orange);
   border: 1px solid var(--orange);
   align-self: flex-end;
-  }
+}
 
 .mobile-hidden{
   display: none;
@@ -635,8 +623,8 @@ li {
  /* -------- HISTORY PAGE DESKTOP -------- */
 
  .history-banner {
-  height: 100vh;
-}
+    height: 100vh;
+  }
 
  .header-img {
     width: 100%;
@@ -644,7 +632,29 @@ li {
     background-size: cover;
   }
 
- .main-container {
+  .main-container {
+    margin-top: 1rem;
+    margin-inline: 8rem;
+    margin-bottom: 4rem;
+  }
+
+
+  .creation, .circuit, .innovation {
+    display: flex;
+    margin: 4rem;
+  }
+
+  .box-1 { order: 1; }
+  .box-2 { order: 2; }
+  .box-3 { order: 2; }
+  .box-4 { order: 1; }
+  .box-5 { order: 1; }
+  .box-6 { order: 2; }
+
+
+
+  /*
+  .main-container {
     display: grid;
     grid-template-columns: minmax (1fr, auto);
     grid-template-rows: minmax (1fr, auto);
@@ -664,20 +674,21 @@ li {
   .box-4 { grid-area: box-4; }
   .box-5 { grid-area: box-5; }
   .box-6 { grid-area: box-6; }
+  */
 
   .main-container > btn history-btn {
     display: none;
   }
 
   .history-img {
-    width: 35rem;
-    height: 22.5rem;
+    width: 27.5rem;
+    height: 18rem;
     margin: auto;
   }
 
   .history-img:hover{ 
     transition: all 1s ease-in-out;
-    transform: scale(1.5);
+    transform: scale(2);
   }
 
   .history-btn {
@@ -685,7 +696,7 @@ li {
   }
 
   .mobile-hidden {
-    display: grid;
+    display: block;
   }
 
 }
