--- a/css/style-home.css
+++ b/css/style-home.css
@@ -16,6 +16,9 @@ html body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: var(--main-bg-color);
+}
+
+html {
   scroll-behavior: smooth;
 }
 
@@ -94,7 +97,6 @@ html body {
 
 /* banner */
 
-
 .main-banner {
   background-image: url('../images/race.jpg');
   height: 70vh;
@@ -104,7 +106,6 @@ html body {
   background-size: cover;
   margin-bottom: var(--section-margin);
 }
-
 
 .header-title {
   text-align: center;
@@ -371,7 +372,6 @@ li {
   display: none;
 }
 
-
 /* -------- HISTORY PAGE MOBILE -------- */
 
 /* banner */
@@ -406,14 +406,13 @@ li {
   padding: 1rem;
 }
 
-.box-2 {  
+.box-2 {
   display: flex;
   flex-direction: column;
   flex: 1;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-  
 
 .box-3 {
   display: flex;
@@ -476,7 +475,7 @@ li {
   align-self: flex-end;
 }
 
-.mobile-hidden{
+.mobile-hidden {
   display: none;
 }
 
@@ -621,13 +620,13 @@ li {
     border-radius: 50px;
   }
 
- /* -------- HISTORY PAGE DESKTOP -------- */
+  /* -------- HISTORY PAGE DESKTOP -------- */
 
- .history-banner {
+  .history-banner {
     height: 100vh;
   }
 
- .header-img {
+  .header-img {
     width: 100%;
     height: 90vh;
     background-size: cover;
@@ -638,19 +637,37 @@ li {
     margin-bottom: 3rem;
   }
 
-  .creation, .circuit, .innovation {
+  .creation,
+  .circuit,
+  .innovation {
     display: flex;
   }
 
-  .box-1 { order: 1; }
-  .box-2 { order: 2; }
-  .box-3 { order: 2; }
-  .box-4 { order: 1; }
-  .box-5 { order: 1; }
-  .box-6 { order: 2; }
+  .box-1 {
+    order: 1;
+  }
+  .box-2 {
+    order: 2;
+  }
+  .box-3 {
+    order: 2;
+  }
+  .box-4 {
+    order: 1;
+  }
+  .box-5 {
+    order: 1;
+  }
+  .box-6 {
+    order: 2;
+  }
 
-
-  .box-1, .box-2, .box-3, .box-4, .box-5, .box-6 {
+  .box-1,
+  .box-2,
+  .box-3,
+  .box-4,
+  .box-5,
+  .box-6 {
     margin: 1rem;
     padding: 1rem;
   }
@@ -685,13 +702,13 @@ li {
     margin: auto;
   }
 
-  .history-img:hover{ 
+  .history-img:hover {
     transition: all 1s ease-in-out;
     transform: scale(2);
   }
 
   /* CSS à ajouter si on veut laisser tout le texte apparent en version desktop et masquer le bouton "voir plus"
-  
+
   .history-btn {
     display: none;
   }
@@ -701,15 +718,3 @@ li {
   }
   */
 }
-
-
-
-
-
-
-
-
-
-
-
-
