--- a/css/style-home.css
+++ b/css/style-home.css
@@ -416,6 +416,7 @@ footer {
 
 hr {
   width: 90vw;
+  margin: 0;
 }
 
 .footerList {
@@ -753,28 +754,28 @@ li {
 
   footer {
     flex-direction: row;
+    align-items: start;
+    height: 35vh;
     padding: 3em;
   }
 
-  .footerMenu {
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: start;
-    width: 33vw;
-    height: 100%;
-  }
-
-  .footerItemSeparator {
+  hr {
     display: none;
   }
 
+  .footerList {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    height: 100%;
+  }
+
   .footerSocialNetworks {
-    width: 33vw;
+    flex-direction: column;
   }
 
   .footerLogo {
     display: block;
-    width: 33vw;
   }
 
   .footerLogoImage {
